# QtAuthenticationProgram

./: CMakeLists.txt
include/: functions.h  inputwindow.h  mylineedit.h  startwindow.h  workwithfiles.h
src/: inputwindow.cpp  main.cpp  startwindow.cpp  workwithfiles.cpp
